<resources>
    <string name="app_name">HWCalculator Plus</string>
    <string name="change_sing">+/-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_point">,</string>
    <string name="btn_calculate">=</string>
    <string name="btn_clear">C</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">−</string>
    <string name="btn_division">÷</string>
    <string name="btn_deleting">⌫</string>
    <string name="btn_multiply">×</string>
    <string name="text_hint_var_b">0</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="settings">Settings</string>
    <string name="apply">Apply</string>
    <string name="select_of_theme">Select of theme:</string>
</resources>