<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundApp"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/set_margin"
        android:text="@string/select_of_theme"
        android:textColor="?attr/colorTextCustom"
        android:textSize="@dimen/set_text_size_title" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radiobutton_light_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_theme"
            android:textColor="?attr/colorTextCustom"
            android:textSize="@dimen/set_text_size" />

        <RadioButton
            android:id="@+id/radiobutton_dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textColor="?attr/colorTextCustom"
            android:textSize="@dimen/set_text_size" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/set_margin"
        android:text="@string/apply" />

</LinearLayout>