<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="#FF0000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:background="#00FF00"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        tools:background="#0000FF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_change_sign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/change_sing"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_changeznack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_changeznack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_clear"
                android:textSize="@dimen/text_size_btn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_7"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_8"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_9"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_changeznack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_4"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_5"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_6"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_changeznack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_1"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_2"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_3"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_changeznack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/btn_0"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_point"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_point"
                android:textSize="@dimen/text_size_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_calculate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/lay_margin_btn"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_calculate"
                android:textSize="@dimen/text_size_btn" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>